--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "flowbite-react": "^0.7.2",
     "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.35",
